--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -36,8 +36,15 @@ jobs:
         uses: matlab-actions/run-command@v2
         if: always()
         with:
-          command: addpath(genpath("tools")), codecheckToolbox()     
-          
+          command: addpath(genpath("tools")), codecheckToolbox()
+
+      # Upload code issues report
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          # Path to SARIF file relative to the root of the repository
+          sarif_file: docs/reports/code_issues.sarif
+      
       # Runs all tests in the project.
       - name: Run tests
         uses: matlab-actions/run-command@v2
@@ -52,11 +59,14 @@ jobs:
         run: |
           git config user.name "${{ github.workflow }} by ${{ github.actor }}"
           git config user.email "<>"
-          git add docs/reports/badge/code_issues.json docs/reports/badge/tests.json
-          git commit -m "Update code issues and tests badges"
-          git fetch
-          # git push returns error code 1 if there's nothing to push (which there often isn't in this case)
-          git push || true
+          
+          if [[ $(git add .github/badges/* --dry-run | wc -l) -gt 0 ]]; then
+            git add .github/badges/*
+            git commit -m "Update code issues and tests badges"
+            git push -f
+          else
+            echo "Nothing to commit"
+          fi
 
       - name: Upload code coverage report to Codecov
         uses: codecov/codecov-action@v4
