--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -26,7 +26,16 @@ jobs:
     steps:
       # Checks-out the repository under $GITHUB_WORKSPACE, so the job can access it
       - name: Check out repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+
+      - name: Install pybadges
+        run: |
+          pip install pybadges
       
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
