--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,16 @@ jobs:
     steps:
       # Checks-out the repository under $GITHUB_WORKSPACE, so the job can access it
       - uses: actions/checkout@v4
+      
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
 
+      - name: Install pybadges
+        run: |
+          pip install pybadges
+          
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
         with:
