--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,15 +24,6 @@ jobs:
     steps:
       # Checks-out the repository under $GITHUB_WORKSPACE, so the job can access it
       - uses: actions/checkout@v4
-      
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.11
-
-      - name: Install pybadges
-        run: |
-          pip install pybadges
           
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
@@ -43,7 +34,9 @@ jobs:
       - name: Run tests
         uses: matlab-actions/run-command@v2
         with:
-          command: addpath(genpath("tools")), testToolbox('ReportSubdirectory',"${{ matrix.MATLABVersion }}")     
+          command: |
+            addpath(genpath("tools"));
+            testToolbox('ReportSubdirectory', "${{ matrix.MATLABVersion }}", 'CreateBadge', false);
 
       # Upload code coverage information to Codecov
       - name: Upload code coverage report to Codecov
