--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       # Checks-out the repository under $GITHUB_WORKSPACE, so the job can access it
       - uses: actions/checkout@v4
-
+          
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
         with:
@@ -34,7 +34,9 @@ jobs:
       - name: Run tests
         uses: matlab-actions/run-command@v2
         with:
-          command: addpath(genpath("tools")), testToolbox('ReportSubdirectory',"${{ matrix.MATLABVersion }}")     
+          command: |
+            addpath(genpath("tools"));
+            testToolbox('ReportSubdirectory', "${{ matrix.MATLABVersion }}", 'CreateBadge', false);
 
       # Upload code coverage information to Codecov
       - name: Upload code coverage report to Codecov
