--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -28,6 +28,13 @@ jobs:
       # Checks-out the repository under $GITHUB_WORKSPACE, so the job can access it
       - name: Check out repo
         uses: actions/checkout@v4
+        with:
+          # Use `github.head_ref` for PRs and `github.ref_name` for other events
+          ref: ${{ github.event_name == 'pull_request' ? github.head_ref : github.ref_name }}
+
+      - name: Verify checked-out branch
+        run: |
+          echo "Checked out branch: $(git rev-parse --abbrev-ref HEAD)"
       
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
