--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event_name == 'pull_request' ? github.head_ref : github.ref_name }}
+          ref: ${{ github.event_name == 'pull_request' && github.head_ref || github.ref_name }}
 
       - name: Verify checked-out branch
         run: |
