--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,6 +12,10 @@ on:
       - '.github/badges/**'
   pull_request:
     branches: [ "main" ]
+    paths-ignore:
+      - '*.md'
+      - '.github/workflows/**'
+      - '.github/badges/**'
 
   # Allows for manually running this workflow from the Actions tab
   workflow_dispatch:
