--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -38,8 +38,10 @@ jobs:
         with:
           ref: ${{ github.event_name == 'pull_request' && github.head_ref || github.ref_name }}
       
-      - name: Set up MATLAB
+      - name: Set up MATLAB (${{ inputs.matlab_release }})
         uses: matlab-actions/setup-matlab@v2
+        with:
+          release: ${{ inputs.matlab_release }}
 
       # Check for MATLAB code issues in the project.
       - name: Check for MATLAB code issues
