--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -20,7 +20,7 @@ on:
       commit_email_address:
         required: true
       CODECOV_TOKEN:
-        required: true
+        required: false
 
 jobs:
   # This workflow contains a single job called "test"
@@ -87,7 +87,7 @@ jobs:
 
       - name: Upload code coverage report to Codecov
         uses: codecov/codecov-action@v4
-        if: always()
+        if: ${{ secrets.CODECOV_TOKEN != '' }}
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: docs/reports/codecoverage.xml
