--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -28,6 +28,8 @@ jobs:
     name: Test toolbox code
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env: # Assign secret to env to be able to use it in if: conditional below
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -87,9 +89,9 @@ jobs:
 
       - name: Upload code coverage report to Codecov
         uses: codecov/codecov-action@v4
-        if: ${{ secrets.CODECOV_TOKEN != '' }}
+        if: ${{ env.CODECOV_TOKEN != '' }}
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ env.CODECOV_TOKEN }}
           files: docs/reports/codecoverage.xml
           
       # Publish test results
