--- a/.github/actions/install-matbox/action.yml
+++ b/.github/actions/install-matbox/action.yml
@@ -13,5 +13,5 @@ runs:
         with:
           command: |
             websave('installMatBox.m', 'https://github.com/ehennestad/Matlab-Toolbox-Template/raw/refs/heads/main/tools/tasks/installMatBox.m');
-            installMatBox( ${{ inputs.mode }} )
+            installMatBox( "${{ inputs.mode }}" )
             delete('installMatBox.m')
