--- a/.github/actions/install-matbox/action.yml
+++ b/.github/actions/install-matbox/action.yml
@@ -15,3 +15,4 @@ runs:
             websave('installMatBox.m', 'https://github.com/ehennestad/Matlab-Toolbox-Template/raw/refs/heads/main/tools/tasks/installMatBox.m');
             installMatBox( "${{ inputs.mode }}" )
             delete('installMatBox.m')
+            savepath()
