--- a/.github/actions/install-matbox/action.yml
+++ b/.github/actions/install-matbox/action.yml
@@ -20,4 +20,5 @@ runs:
         uses: matlab-actions/run-command@v2
         with:
           command: |
+            addpath( "${{ github.action_path }}" )
             installMatBox( "${{ inputs.mode }}", "InstallationLocation", "/home/runner/" )
