--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -44,6 +44,7 @@ jobs:
         uses: matlab-actions/setup-matlab@v2
         with:
           release: ${{ inputs.matlab_release }}
+          cache: true
 
       # Check for MATLAB code issues in the project.
       - name: Check for MATLAB code issues
