--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -17,6 +17,7 @@ on:
         default: 'latest'
       matlab_use_cache:
         required: false
+        type: boolean
         default: false
 
     secrets:
