--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -51,10 +51,10 @@ jobs:
           cache: ${{ inputs.matlab_use_cache }}
 
       - name: Install MatBox
-        uses: ./.github/actions/install-matbox
+        uses: ehennestad/matbox/.github/actions/install-matbox@add-reusable-test-workflow
       
       - name: Check code and upload report
-        uses: ./.github/actions/check-code
+        uses: ehennestad/matbox/.github/actions/check-code@add-reusable-test-workflow
         with:
           code_directory: '.'
       
@@ -68,8 +68,8 @@ jobs:
             testToolbox()
 
       - name: Commit SVG badges if updated
-        uses: ./.github/actions/push-badges
-
+        uses: ehennestad/matbox/.github/actions/push-badges@add-reusable-test-workflow
+      
       - name: Upload code coverage report to Codecov
         uses: codecov/codecov-action@v4
         if: ${{ env.CODECOV_TOKEN != '' }}
