--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -64,6 +64,7 @@ jobs:
         if: always()
         with:
           command: |
+            addpath(genpath( "${{ inputs.code_directory }}" ));
             addpath(genpath( "${{ inputs.tools_directory }}" ));
             testToolbox()
 
