--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -39,11 +39,14 @@ jobs:
     steps:
       # Check out the repository under $GITHUB_WORKSPACE, so the job can access it
       # Check out the head-ref if PR, as we are going to push badges back to the PR branch
-      - name: Check out repo
+      
+      - name: Check out PR source branch (fork-aware)
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event_name == 'pull_request' && github.head_ref || github.ref_name }}
-      
+          ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.ref || github.ref_name }}
+          repository: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name || github.repository }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Set up MATLAB (${{ inputs.matlab_release }})
         uses: matlab-actions/setup-matlab@v2
         with:
@@ -64,14 +67,12 @@ jobs:
         if: always()
         with:
           command: |
-            disp(pwd)
-            ls
-            ls tools/tasks
             addpath(genpath( "${{ inputs.code_directory }}" ));
             addpath(genpath( "${{ inputs.tools_directory }}" ));
             testToolbox()
 
       - name: Commit SVG badges if updated
+        if: github.event.pull_request.head.repo.full_name == github.repository
         uses: ehennestad/matbox/.github/actions/push-badges@add-reusable-test-workflow
       
       - name: Upload code coverage report to Codecov
