--- a/.github/actions/push-badges/action.yml
+++ b/.github/actions/push-badges/action.yml
@@ -1,11 +1,33 @@
 name: 'Push GitHub badges'
 description: 'Push badges for use on GitHub and located in .github/badges if there are detected changes.'
 
+inputs:
+  pr-ref:
+    description: "Branch ref to check out"
+    required: true
+  pr-repo:
+    description: "Repository (owner/repo) to check out from"
+    required: true
+
 runs:
   using: "composite"
   steps:
+      # Check out the actual source branch in a separate working tree
+      - name: Checkout PR branch for pushing badges
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.pr-ref }}
+          repository: ${{ inputs.pr-repo }}
+          path: pr-branch
+
+      # Copy generated files to actual branch
+      - name: Copy badges to PR branch
+        run: |
+          cp -r .github/badges/* pr-branch/.github/badges/ 2>/dev/null || echo "No badges to copy"
+
       # Commit updated SVG badges for the issues and tests (if changed)
-      - name: Commit SVG badges if updated
+      - name: Commit and push SVG badges if updated
+        working-directory: pr-branch
         shell: bash
         run: |
           git config user.name "github-actions[bot]"
@@ -13,9 +35,9 @@ runs:
           git fetch 
 
           if [[ $(git add .github/badges/* --dry-run | wc -l) -gt 0 ]]; then
-            git add .github/badges/*
+            git add .github/badges
             git commit -m "Update GitHub badges"
-            git push -f
+            git push origin HEAD
           else
             echo "Nothing to commit"
           fi
