--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -72,9 +72,12 @@ jobs:
             testToolbox()
 
       - name: Commit SVG badges if updated
-        if: github.event.pull_request.head.repo.full_name == github.repository
+        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
         uses: ehennestad/matbox/.github/actions/push-badges@add-reusable-test-workflow
-      
+        with:
+          pr-ref: ${{ github.event.pull_request.head.ref }}
+          pr-repo: ${{ github.event.pull_request.head.repo.full_name }}
+
       - name: Upload code coverage report to Codecov
         uses: codecov/codecov-action@v4
         if: ${{ env.CODECOV_TOKEN != '' }}
