--- a/.github/actions/push-badges/action.yml
+++ b/.github/actions/push-badges/action.yml
@@ -22,6 +22,7 @@ runs:
 
       # Copy generated files to actual branch
       - name: Copy badges to PR branch
+        shell: bash
         run: |
           cp -r .github/badges/* pr-branch/.github/badges/ 2>/dev/null || echo "No badges to copy"
 
