Changed default mode for MatBox installation (in composite action)
Changed default mode for MatBox installation

--- a/.github/actions/install-matbox/action.yml
+++ b/.github/actions/install-matbox/action.yml
@@ -4,7 +4,7 @@ inputs:
   mode:  # mode of installation: release or commit, i.e install latest released version or use latest commit
     description: 'Which installation mode to use'
     required: true
-    default: 'release'
+    default: 'commit'
 runs:
   using: "composite"
   steps:
