--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -47,20 +47,17 @@ jobs:
 
       - name: Install MatBox
         uses: ehennestad/matbox/.github/actions/install-matbox@add-reusable-test-workflow
-      
+
       - name: Check code and upload report
         uses: ehennestad/matbox/.github/actions/check-code@add-reusable-test-workflow
         with:
           code_directory: '.'
       
       - name: Run tests
-        uses: matlab-actions/run-command@v2
-        if: always()
+        uses: ehennestad/matbox/.github/actions/test-code@add-reusable-test-workflow
         with:
-          command: |
-            addpath(genpath( "${{ inputs.code_directory }}" ));
-            addpath(genpath( "${{ inputs.tools_directory }}" ));
-            testToolbox()
+          code_directory: ${{ inputs.code_directory }}
+          tools_directory: ${{ inputs.tools_directory }}
 
       - name: Commit SVG badges if updated
         if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
@@ -75,13 +72,7 @@ jobs:
         with:
           token: ${{ env.CODECOV_TOKEN }}
           files: docs/reports/codecoverage.xml
-          
-      - name: Publish test results
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        if: always()
-        with:
-          files: "docs/reports/test-results.xml"
-          
+
       - name: Save reports directory
         uses: actions/upload-artifact@v4
         if: always()
