--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -67,11 +67,12 @@ jobs:
           pr-repo: ${{ github.event.pull_request.head.repo.full_name }}
 
       - name: Upload code coverage report to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         if: ${{ env.CODECOV_TOKEN != '' }}
         with:
           token: ${{ env.CODECOV_TOKEN }}
           files: docs/reports/codecoverage.xml
+          root_dir: ${{ inputs.code_directory }}
 
       - name: Save reports directory
         uses: actions/upload-artifact@v4
