--- a/.github/workflows/reusable_test_workflow.yml
+++ b/.github/workflows/reusable_test_workflow.yml
@@ -51,7 +51,8 @@ jobs:
       - name: Check code and upload report
         uses: ehennestad/matbox/.github/actions/check-code@add-reusable-test-workflow
         with:
-          code_directory: '.'
+          code_directory: ${{ inputs.code_directory }}
+          tools_directory: ${{ inputs.tools_directory }}
       
       - name: Run tests
         uses: ehennestad/matbox/.github/actions/test-code@add-reusable-test-workflow
