Remove unused code in install-matbox

--- a/.github/actions/install-matbox/action.yml
+++ b/.github/actions/install-matbox/action.yml
@@ -13,7 +13,7 @@ runs:
         with:
           command: |
             addpath( "${{ github.action_path }}" )
-            installMatBox( "${{ inputs.mode }}", "InstallationLocation", "/home/runner/" )
+            installMatBox( "${{ inputs.mode }}" )
       
       - name: Confirm installation of MatBox
         uses: matlab-actions/run-command@v2
